navbar color change

--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -34,7 +34,7 @@
 .login-btn, .post-btn, .logout-btn {
   text-decoration: none;
   color: white;
-  background-color: #f44336;
+  background-color: #d32f2f;
   border: none;
   padding: 5px 10px;
   border-radius: 5px;
